update secret key

--- a/WebApiCore/appsettings.json
+++ b/WebApiCore/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "SecretKey": "FreeCourseDemo"
+  },
   "ConnectionStrings": {
     "default": "Host=localhost; Database=postgres;Port=5432; Username=postgres; Password=Duc26031997"
   },
