--- a/WebApiCore/appsettings.json
+++ b/WebApiCore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "SecretKey": "FreeCourseDemo"
+    "SecretKey": "FreeCourseDemoASPNETCoreWebAPI22"
   },
   "ConnectionStrings": {
     "default": "Host=localhost; Database=postgres;Port=5432; Username=postgres; Password=Duc26031997"
